WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46362
IndexedDB shouldn't crash on invalid index names
https://bugs.webkit.org/show_bug.cgi?id=46362
Summary
IndexedDB shouldn't crash on invalid index names
Jeremy Orlow
Reported
2010-09-23 09:34:10 PDT
IndexedDB shouldn't crash on invalid index names
Attachments
Patch
(4.66 KB, patch)
2010-09-23 09:38 PDT
,
Jeremy Orlow
no flags
Details
Formatted Diff
Diff
Patch
(5.25 KB, patch)
2010-09-23 09:59 PDT
,
Jeremy Orlow
steveblock
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Orlow
Comment 1
2010-09-23 09:38:43 PDT
Created
attachment 68529
[details]
Patch
Andrei Popescu
Comment 2
2010-09-23 09:54:59 PDT
> ASSERT(m_transactions.contains(transaction->id()));
You need to rebase.
Jeremy Orlow
Comment 3
2010-09-23 09:59:51 PDT
Created
attachment 68536
[details]
Patch
Steve Block
Comment 4
2010-09-23 10:01:16 PDT
Comment on
attachment 68536
[details]
Patch r=me
Jeremy Orlow
Comment 5
2010-09-23 10:33:13 PDT
Committed
r68161
: <
http://trac.webkit.org/changeset/68161
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug