2010-09-23  Jeremy Orlow  <jorlow@chromium.org>

Reviewed by Steve Block.

        IndexedDB shouldn't crash on invalid index names
        https://bugs.webkit.org/show_bug.cgi?id=46362

        * storage/indexeddb/objectstore-basics-expected.txt:
        * storage/indexeddb/objectstore-basics.html:
2010-09-23  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by Steve Block.

        IndexedDB shouldn't crash on invalid index names
        https://bugs.webkit.org/show_bug.cgi?id=46362

        For now, return null.  In a later patch, we'll do proper exception raising.

        * storage/IDBObjectStore.cpp:
        (WebCore::IDBObjectStore::index):

Canonical link: https://commits.webkit.org/58860@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68161 268f45cc-cd09-0410-ab3c-d52691b4dbfc